kubernetes/production/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metric-metadata-service
    service: metric-metadata-service
  name: metric-metadata-service
  namespace: production
spec:
  selector:
    app: metric-metadata-service
  ports:
    - name: http
      port: 8080
