kubernetes/production/06_auth_policies.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: metric-metadata-service-request-authentication
  namespace: production
spec:
  selector:
    matchLabels:
      app: metric-metadata-service
  jwtRules:
    - issuer: https://thisismatter.eu.auth0.com/
      jwksUri: https://thisismatter.eu.auth0.com/.well-known/jwks.json
      outputPayloadToHeader: jwt

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: metric-metadata-service-authorization-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: metric-metadata-service
  action: ALLOW
  rules:
    - to:
        - operation:
            paths: [ "/health" ]
            methods: [ "GET" ]
    - to:
        - operation:
            methods: [ "GET", "POST", "PUT", "DELETE" ]
      when:
        - key: request.auth.claims[iss]
          values: [ "https://thisismatter-dev.eu.auth0.com/" ]
        - key: request.auth.claims[https://auth.thisismatter.com/permissions/]
          values: [ 'platform:superuser:write' ]
